<resources>
    <string name="app_name">GStreamer Webcam</string>
    <string name="title_activity_settings">Settings</string>

    <!-- menu items -->
    <string name="action_settings_label">Settings</string>
    <string name="action_other_apps_label">My other apps</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="video_resolutions">Video resolution</string>
    <string-array name="video_resolutions_standards">
        <!--<item>QCIF</item>-->
        <item>CGA</item>
        <item>CIF</item>
        <item>VGA</item>
        <!--<item>NTSC</item>-->
        <item>WVGA</item>
        <item>HD 720p 4:3</item>
        <item>HD 720p 16:9</item>
        <item>HD 1080p 4:3</item>
        <item>HD 1080p 16:9</item>
    </string-array>
    <string-array name="video_resolutions_sizes">
        <!--<item>176 × 144</item>-->
        <item>320 × 240</item>
        <item>352 × 288</item>
        <item>640 × 480</item>
        <!--<item>720 × 480</item>-->
        <item>800 × 480</item>
        <item>960 × 720</item>
        <item>1280 × 720</item>
        <item>1440 × 1080</item>
        <item>1920 × 1080</item>
    </string-array>
    <string-array name="video_resolutions_index">
        <!--<item>0</item>-->
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <!--<item>4</item>-->
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string name="video_bitrate">Video bitrate</string>
    <string name="audio_bitrate">Audio bitrate</string>

    <string name="port_video">Video port number</string>
    <string name="port_audio">Audio port number</string>

    <string name="flac_enable">FLAC encoding</string>

    <string name="close">Close</string>
    <string name="receiving_video_title">Receiving video:</string>
    <!--<string name="receiving_video_message">gst-launch-1.0 udpsrc port=5000 !\u00a0h264parse ! avdec_h264 !\u00a0autovideosink</string>-->
    <string name="receiving_audio_title">Receiving audio:</string>
    <!--<string name="receiving_audio_message">gst-launch-1.0 udpsrc port=5001 !\u00a0audio/x-raw, format=S16LE, channels=1, rate=16000 !\u00a0autoaudiosink</string>-->
    <string name="receiving_audio_flac_title">Receiving audio (FLAC):</string>
    <!--<string name="receiving_audio_flac_message">gst-launch-1.0 udpsrc port=5001 !\u00a0flacparse ! flacdec !\u00a0autoaudiosink</string>-->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data and sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
</resources>
