<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="3"
        android:title="@string/video_resolutions"
        android:entries="@array/video_resolutions_sizes"
        android:entryValues="@array/video_resolutions_index"
        android:key="h264-resolution"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="512000"
        android:title="@string/video_bitrate"
        android:inputType="text|number"
        android:key="h264-bitrate"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="flac-toggle"
        android:title="@string/flac_enable" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="16000"
        android:title="@string/audio_bitrate"
        android:inputType="text|number"
        android:key="opensles-bitrate"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="5000"
        android:title="@string/port_video"
        android:inputType="text|number"
        android:key="port-video"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="5001"
        android:title="@string/port_audio"
        android:inputType="text|number"
        android:key="port-audio"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />
</PreferenceScreen>
